add one journal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1555,7 +1555,8 @@
 	}
 
 	body, input, select, textarea {
-		color: #888;
+		color: #6a6a6a;
+/*        #888*/
 		font-family: "Lato", sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
@@ -1579,7 +1580,7 @@
 		}
 
 	strong, b {
-		color: #777;
+		color: #464646;
 		font-weight: 700;
 	}
 
@@ -1592,7 +1593,8 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #777;
+		color: #464646; 
+        /*#777*/
 		font-weight: 700;
 		line-height: 1em;
 		margin: 0 0 0.5625em 0;
@@ -1728,16 +1730,22 @@
 
 	header.major h2 {
 		color: #00A6D6;
-		font-size: 3.5em;
+		font-size: 2em;
 	}
 
 		header.major h2 + p {
-			color: #777;
+			color: #464646;
 			font-size: 1.75em;
 			font-weight: 700;
 			margin-top: -0.75em;
 		}
+/*
 
+	header.major h3 {
+		color: #00A6D6;
+		font-size: 3.5em;
+	}
+*/
 /* Form */
 
 	form {
@@ -1745,7 +1753,7 @@
 	}
 
 	label {
-		color: #777;
+		color: #464646;
 		display: block;
 		font-size: 0.9em;
 		font-weight: 700;
@@ -2223,7 +2231,7 @@
 		}
 
 		table th {
-			color: #777;
+			color: #464646;
 			font-size: 0.9em;
 			font-weight: 700;
 			padding: 0 0.75em 0.75em 0.75em;
@@ -2351,7 +2359,7 @@
 		.button.alt {
 			background-color: transparent;
 			box-shadow: inset 0 0 0 2px #e4e4e4;
-			color: #777 !important;
+			color: #464646 !important;
 		}
 
 			input[type="submit"].alt:hover,
@@ -2359,7 +2367,7 @@
 			input[type="button"].alt:hover,
 			.button.alt:hover {
 				background-color: #f4f4f4;
-				color: #777 !important;
+				color: #464646 !important;
 			}
 
 			input[type="submit"].alt:active,
