--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1557,7 +1557,11 @@
 	body, input, select, textarea {
 		color: #6a6a6a;
 /*        #888*/
-		font-family: "Lato", sans-serif;
+        font-family: "Futura","Trebuchet MS",Arial,Tahoma,sans-serif," Microsoft JhengHei","STHeiti Light",; 
+/*        font-family: "Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif*/
+/*        font-family: Candara,Calibri,Segoe,"Segoe UI",Optima,Arial,sans-serif*/
+/*		font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;*/
+/*        "Lato", sans-serif;*/
 		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75em;
@@ -1615,6 +1619,12 @@
 		font-size: 1.75em;
 		line-height: 1.5em;
 	}
+    
+    h3.quote{
+        
+        font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold";
+    
+    }
 
 	h4 {
 		font-size: 1.25em;
