--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1558,7 +1558,7 @@
 		color: #6a6a6a;
 /*        #888*/
 /*        font-family: "Futura","Trebuchet MS",Arial,Tahoma,sans-serif," Microsoft JhengHei","STHeiti Light",; */
-        font-family: "Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif
+        font-family: "Lato", sans-serif,"Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif,Arial,"Helvetica Neue",Helvetica,"Microsoft JhengHei","STHeiti Light"
 /*        font-family: Candara,Calibri,Segoe,"Segoe UI",Optima,Arial,sans-serif*/
 /*		font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;*/
 /*        "Lato", sans-serif;*/
