--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1557,8 +1557,8 @@
 	body, input, select, textarea {
 		color: #6a6a6a;
 /*        #888*/
-/*        font-family: "Futura","Trebuchet MS",Arial,Tahoma,sans-serif," Microsoft JhengHei","STHeiti Light",; */
-        font-family: "Lato", sans-serif,"Trebuchet MS","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif,Arial,"Helvetica Neue",Helvetica,"Microsoft JhengHei","STHeiti Light"
+/*        font-family: "Futura",,Arial,Tahoma,sans-serif,"Microsoft JhengHei"; */
+        font-family: "Lato", sans-serif,"Lucida Grande","Lucida Sans Unicode","Lucida Sans",Tahoma,sans-serif,Arial,"Helvetica Neue",Helvetica,"Microsoft JhengHei";
 /*        font-family: Candara,Calibri,Segoe,"Segoe UI",Optima,Arial,sans-serif*/
 /*		font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;*/
 /*        "Lato", sans-serif;*/
@@ -2305,9 +2305,9 @@
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 700;
-		height: 2.75em;
-		line-height: 2.75em;
-		padding: 0 1.5em;
+		height: 2.15em;
+		line-height: 2.15em;
+		padding: 0 1em;
 		text-align: center;
 		text-decoration: none;
 		white-space: nowrap;
